--- a/adaptiv/index.html
+++ b/adaptiv/index.html
@@ -13,12 +13,16 @@
   <body>
     <header>
       <i class="fas fa-home"></i>
-      <nav>
+      <nav id="navigation">
         <a href="#">Главная</a>
         <a href="#">Главная</a>
         <a href="#">Главная</a>
         <a href="#">Главная</a>
       </nav>
+      <i class="fas fa-bars" id="menu"></i>
     </header>
   </body>
+  <script src="./index.js">
+    
+  </script>
 </html>
