--- a/adaptiv/index.html
+++ b/adaptiv/index.html
@@ -21,6 +21,32 @@
       </nav>
       <i class="fas fa-bars" id="menu"></i>
     </header>
+    <main>
+      <div> 
+        <img src="обложка.jpg"></img>
+        <h2>Не время умирать (2021)</h2>
+        <p>Джеймс Бонд оставил оперативную службу и наслаждается спокойной жизнью на Ямайке. Все меняется, когда на острове появляется его старый друг Феликс Лейтер из ЦРУ с просьбой о помощи.</p>
+
+      </div>
+      <div> 
+        <img src="обложка.jpg"></img>
+        <h2>Не время умирать (2021)</h2>
+        <p>Джеймс Бонд оставил оперативную службу и наслаждается спокойной жизнью на Ямайке. Все меняется, когда на острове появляется его старый друг Феликс Лейтер из ЦРУ с просьбой о помощи.</p>
+
+      </div>
+      <div> 
+        <img src="обложка.jpg"></img>
+        <h2>Не время умирать (2021)</h2>
+        <p>Джеймс Бонд оставил оперативную службу и наслаждается спокойной жизнью на Ямайке. Все меняется, когда на острове появляется его старый друг Феликс Лейтер из ЦРУ с просьбой о помощи.</p>
+
+      </div>
+      <div> 
+        <img src="обложка.jpg"></img>
+        <h2>Не время умирать (2021)</h2>
+        <p>Джеймс Бонд оставил оперативную службу и наслаждается спокойной жизнью на Ямайке. Все меняется, когда на острове появляется его старый друг Феликс Лейтер из ЦРУ с просьбой о помощи.</p>
+
+      </div>
+    </main>
   </body>
   <script src="./index.js">
     
