--- a/carusel/index.html
+++ b/carusel/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main>
-        <button> ⬅️</button>
+        <button id="left"> ⬅️</button>
         <nav>
-            <div>
+            <div id="carusel">
             <img src="./1.jpg">
             <img src="./2.jpg">
             <img src="./3.jpg">
@@ -18,7 +18,8 @@
             <img src="./5.jpg">
             </div>
         </nav>
-        <button> ➡️</button>
+        <button id="right"> ➡️</button>
     </main>
+    <script src="./main.js"></script>
 </body>
 </html>
